--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,14 @@
 import Page from "@layouts/Page.astro";
 import Footer from "@components/Footer.astro";
 ---
-<Page title="mudkip">
+<Page title="LU15">
     <p>
-        i'm a software developer and security researcher, my interests include programming, video games, and music.
-        <span style="color: var(--surface-2)">(i also use NixOS btw)</span>
+        british hobbyist programmer, sysadmin, and student. i like to push Minecraft to its limits
     </p>
     <ul>
-        <li>Matrix: <a href="https://matrix.to/#/@mudkip:nope.chat" target="_blank">@mudkip:nope.chat</a></li>
-        <li>GitHub: <a href="https://github.com/mudkipdev" target="_blank">mudkipdev</a></li>
-        <li>Email: <a href="mailto:mudkip@mudkip.dev">mudkip@mudkip.dev</a></li>
+        <li>Matrix: <a href="https://matrix.to/#/@luis:lu15.dev" target="_blank">@luis:lu15.dev</a></li>
+        <li>GitHub: <a href="https://github.com/LooFifteen" target="_blank">LooFifteen</a></li>
+        <li>Email: <a href="mailto:luis@lu15.dev">luis@lu15.dev</a></li>
     </ul>
     <Footer />
 </Page>
