--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,14 @@
 ---
 ---
 <footer>
-    <a href="https://mudkip.dev"><img alt="mudkip" src="/buttons/mudkip.png"></a>
-    <a href="https://matdoes.dev/retro"><img src="/buttons/mat.png"></a>
-    <a href="https://zeffo.me"><img src="/buttons/aman.webp" /></a>
-    <a href="https://goldenstack.net"><img src="/buttons/golden.png"></a>
-    <a href="https://damcraft.de"><img src="/buttons/dam.png"></a>
-    <a href="https://nikolan.xyz"><img src="/buttons/niko.png"></a>
-    <a href="https://paddyk45.de"><img src="/buttons/paddy.png"></a>
-    <a href="https://emortaldev.github.io"><img src="/buttons/emortal.png"></a>
-    <a href="https://mozilla.org/firefox"><img src="/buttons/firefox.png"></a>
-    <a href="https://code.visualstudio.com"><img src="/buttons/vsc.gif"></a>
-    <a href="https://ublockorigin.com"><img src="/buttons/ublock.png"></a>
-    <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.gif"></a>
+    <a href="https://emortaldev.github.io"><img alt="emortaldev" src="/buttons/emortaldev.png"></a>
+    <img alt="miku" src="/buttons/miku.gif" />
 </footer>
 
 <style>
-    footer a {
-        width: 88;
-        height: 31;
+    footer a img {
+        width: 88px;
+        height: 31px;
         image-rendering: pixelated;
         padding: 0 !important;
         margin: 0 !important;
