feat: finally made a badge

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 ---
 <footer>
+    <img alt="lu15" src="/buttons/lu15.png" />
     <a href="https://emortaldev.github.io"><img alt="emortaldev" src="/buttons/emortaldev.png"></a>
     <img alt="miku" src="/buttons/miku.gif" />
 </footer>
